--- a/output/archives.html
+++ b/output/archives.html
@@ -17,7 +17,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Software Engineering Blog </a></h1>
                 <nav><ul>
-                    <li><a href="./category/devops.html">DevOps</a></li>
+                    <li><a href="./category/sre.html">SRE</a></li>
                     <li><a href="./category/tecnologia.html">Tecnologia</a></li>
                 </ul>
                 </nav>
@@ -26,8 +26,8 @@
 <h1>Archives for Software Engineering Blog</h1>
 
 <dl>
-    <dt>Sat 28 December 2019</dt>
-    <dd><a href="./cicd-para-principiantes.html">CICD para Principiantes</a></dd>
+    <dt>Mon 15 June 2020</dt>
+    <dd><a href="./glosario-devops.html">Glosario DevOps</a></dd>
     <dt>Sat 02 December 2017</dt>
     <dd><a href="./internet-municipal-en-san-francisco-usa.html">Internet Municipal en San Francisco, USA</a></dd>
 </dl>
@@ -51,7 +51,7 @@
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
-                <p>Creado con <a href="http://getpelican.com/">Pelican</a>, <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a> y <a href="http://www.python.org">Python</a> </p>
+                <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a>, inspired by the default theme.</p>
         </footer><!-- /#contentinfo -->
 
 </body>
