--- a/output/categories.html
+++ b/output/categories.html
@@ -17,14 +17,14 @@
         <header id="banner" class="body">
                 <h1><a href="./">Software Engineering Blog </a></h1>
                 <nav><ul>
-                    <li><a href="./category/devops.html">DevOps</a></li>
+                    <li><a href="./category/sre.html">SRE</a></li>
                     <li><a href="./category/tecnologia.html">Tecnologia</a></li>
                 </ul>
                 </nav>
         </header><!-- /#banner -->
     <h1>Categories on Software Engineering Blog</h1>
     <ul>
-        <li><a href="./category/devops.html">DevOps</a> (1)</li>
+        <li><a href="./category/sre.html">SRE</a> (1)</li>
         <li><a href="./category/tecnologia.html">Tecnologia</a> (1)</li>
     </ul>
         <section id="extras" class="body">
@@ -46,7 +46,7 @@
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
-                <p>Creado con <a href="http://getpelican.com/">Pelican</a>, <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a> y <a href="http://www.python.org">Python</a> </p>
+                <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a>, inspired by the default theme.</p>
         </footer><!-- /#contentinfo -->
 
 </body>
