--- a/output/internet-municipal-en-san-francisco-usa.html
+++ b/output/internet-municipal-en-san-francisco-usa.html
@@ -17,7 +17,7 @@
         <header id="banner" class="body">
                 <h1><a href="./">Software Engineering Blog </a></h1>
                 <nav><ul>
-                    <li><a href="./category/devops.html">DevOps</a></li>
+                    <li><a href="./category/sre.html">SRE</a></li>
                     <li class="active"><a href="./category/tecnologia.html">Tecnologia</a></li>
                 </ul>
                 </nav>
@@ -66,7 +66,7 @@
         </section><!-- /#extras -->
 
         <footer id="contentinfo" class="body">
-                <p>Creado con <a href="http://getpelican.com/">Pelican</a>, <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a> y <a href="http://www.python.org">Python</a> </p>
+                <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme <a href="https://github.com/blueicefield/pelican-blueidea/">blueidea</a>, inspired by the default theme.</p>
         </footer><!-- /#contentinfo -->
 
 </body>
